fix: renamed endpoint