@@ -1,9 +1,9 @@
 package fr.insee.pearljam.api.reporting.presenter;
 
-import fr.insee.pearljam.api.reporting.response.CampaignProvisionalStatusByInterviewersResponse;
-import fr.insee.pearljam.api.reporting.response.CampaignProvisionalStatusByInterviewersResponse.Interviewer;
-import fr.insee.pearljam.api.reporting.response.CampaignProvisionalStatusByInterviewersResponse.Interviewer.SurveyUnitsResponse;
-import fr.insee.pearljam.api.reporting.response.CampaignProvisionalStatusByInterviewersResponse.OrganizationUnitSite;
+import fr.insee.pearljam.api.reporting.response.CampaignClosingCausesByInterviewersResponse;
+import fr.insee.pearljam.api.reporting.response.CampaignClosingCausesByInterviewersResponse.Interviewer;
+import fr.insee.pearljam.api.reporting.response.CampaignClosingCausesByInterviewersResponse.Interviewer.SurveyUnitsResponse;
+import fr.insee.pearljam.api.reporting.response.CampaignClosingCausesByInterviewersResponse.OrganizationUnitSite;
 import fr.insee.pearljam.domain.reporting.readmodel.CampaignDailyStats;
 import fr.insee.pearljam.domain.reporting.readmodel.InterviewerDailyStats;
 import org.junit.jupiter.api.BeforeEach;
@@ -15,13 +15,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-class CampaignProvisionalStatusByInterviewerApiPresenterTest {
+class CampaignClosingCausesByInterviewerApiPresenterTest {
 
-    private CampaignProvisionalStatusByInterviewerApiPresenter presenter;
+    private CampaignClosingCausesByInterviewerApiPresenter presenter;
 
     @BeforeEach
     void setUp() {
-        presenter = new CampaignProvisionalStatusByInterviewerApiPresenter();
+        presenter = new CampaignClosingCausesByInterviewerApiPresenter();
     }
 
     // --- Helpers ---
@@ -40,7 +40,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         when(stats.getNpiClosingCauseCount()).thenReturn(npi);
         when(stats.getNpxClosingCauseCount()).thenReturn(npx);
         when(stats.getRowClosingCauseCount()).thenReturn(row);
-        when(stats.getTotalClosingCauses()).thenReturn(total);
+        when(stats.getProvisionalStatusTotal()).thenReturn(total);
         return stats;
     }
 
@@ -63,12 +63,12 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 20L);
         CampaignDailyStats campaignStats = mockCampaignStats(200L, 40L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(interviewerStats), siteStats, campaignStats);
 
         assertThat(result.interviewers()).hasSize(1);
 
-        Interviewer interviewer = result.interviewers().get(0);
+        Interviewer interviewer = result.interviewers().getFirst();
         assertThat(interviewer.interviewerId()).isEqualTo("int-01");
         assertThat(interviewer.interviewerLabel()).isEqualTo("Alice Martin");
 
@@ -90,7 +90,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 13L);
         CampaignDailyStats campaignStats = mockCampaignStats(150L, 13L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(int1, int2), siteStats, campaignStats);
 
         assertThat(result.interviewers()).hasSize(2);
@@ -104,7 +104,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 0L);
         CampaignDailyStats campaignStats = mockCampaignStats(0L, 0L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(), siteStats, campaignStats);
 
         assertThat(result.interviewers()).isEmpty();
@@ -115,7 +115,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 42L);
         CampaignDailyStats campaignStats = mockCampaignStats(300L, 0L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(), siteStats, campaignStats);
 
         OrganizationUnitSite site = result.site();
@@ -130,7 +130,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 0L);
         CampaignDailyStats campaignStats = mockCampaignStats(10L, 0L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(stats), siteStats, campaignStats);
 
         assertThat(result.interviewers().get(0).interviewerLabel()).isEqualTo("Jean Dupuis");
@@ -142,7 +142,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 0L);
         CampaignDailyStats campaignStats = mockCampaignStats(0L, 0L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(stats), siteStats, campaignStats);
 
         Interviewer interviewer = result.interviewers().get(0);
@@ -159,7 +159,7 @@ class CampaignProvisionalStatusByInterviewerApiPresenterTest {
         CampaignDailyStats siteStats = mockCampaignStats(0L, 77L);
         CampaignDailyStats campaignStats = mockCampaignStats(500L, 99L);
 
-        CampaignProvisionalStatusByInterviewersResponse result =
+        CampaignClosingCausesByInterviewersResponse result =
                 presenter.present(List.of(), siteStats, campaignStats);
 
         // allocated comes from campaignStats
